--- a/src/Components/Tag.css
+++ b/src/Components/Tag.css
@@ -3,4 +3,7 @@
     padding: 4px;
     border-radius: 4px;
     background-color: blue;
+    margin: 10px;
+    color: white;
+    text-transform: uppercase;
 }
