--- a/src/App.css
+++ b/src/App.css
@@ -8,8 +8,9 @@
 .section {
   border: 3px solid black;
   border-radius: 10px;
-  margin: 10px 20px;
+  margin: 10px auto 20px;
   padding: 10px;
+  max-width: 1000px;
 }
 
 .recipe-image {
