styles the delete button on the tag and gives it a placeholder onClick

--- a/src/Components/Tag.css
+++ b/src/Components/Tag.css
@@ -8,3 +8,9 @@
     text-transform: uppercase;
     display: inline-block;
 }
+
+.tag-delete-btn {
+    background-color: transparent;
+    border: none;
+    color: white;
+}
