--- a/src/Components/Review.css
+++ b/src/Components/Review.css
@@ -1,3 +1,15 @@
 .review-container {
     border: 2px solid black;
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+}
+
+.rating-date-container {
+    display: flex;
+    flex-direction: row;
+}
+
+.date {
+    padding-left: 12px;
 }
