--- a/src/Components/Review.css
+++ b/src/Components/Review.css
@@ -4,8 +4,9 @@
     flex-direction: column;
     justify-content: left;
     padding: 12px;
-    margin-top: 8px;
+    margin: 8px;
     height: 200px;
+    width: 450px;
 }
 
 .review-title {
