removes padding on nutritional facts list

--- a/src/Components/NutritionalFacts.css
+++ b/src/Components/NutritionalFacts.css
@@ -1,6 +1,7 @@
 #nutritionalFactsList {
     list-style-type: none;
     display: inline-block;
+    padding-inline-start: 0px;
 }
 
 #nutritionalFactsList li {
